# HAZEL

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
Engine/: CMakeLists.txt
Engine/src/: Hazel.h  hzpch.h
Engine/src/HAZEL/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Engine/src/HAZEL/Core/: Timestep.h
Engine/src/HAZEL/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/HAZEL/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/HAZEL/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/HAZEL/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: SandboxApp.cpp
cmake/: Common.cmake
note/: EventCallback.md  Render and RenderAPI.md  Renderer,Renderer Command and RendererAPI.md  render and render api.md
scripts/: build.bat  build_vs.bat  build_xcode.sh  cmake_documentation.md  engine_documentation.md  generate_cmake_structure.py  generate_doc.bat  generate_doc.sh  generate_engine_doc.py
